--- a/Pages/cate.html
+++ b/Pages/cate.html
@@ -7,7 +7,7 @@
     <title>DLK CAMBODIA</title>
     <link rel="icon" href="/Image/icon.jpg">
     <link rel="stylesheet" href="/CSS/cate.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
@@ -35,14 +35,192 @@
                 <h1>Enjoy With Your Shopping</h1>
             </div>
             <div class="input">
-                <i class="bi bi-search"></i>
+                <i class="fas fa-search"></i>
                 <input type="text" name="search" id="search" placeholder="Search for the meaning of life... ">
             </div>
         </div>
         <div class="main-2">
-            
+            <div class="card">
+                <a href="#jelwery">
+                    <div class="card1"></div>
+                </a>
+                <a href="#toy">
+                    <div class="card2"></div>
+                </a>
+                <a href="#watch">
+                    <div class="card3"></div>
+                </a>
+                <a href="#useful">
+                    <div class="card4"></div>
+                </a>
+            </div>
         </div>
     </main>
+    <div class="categories">
+        <div id="jelwery">
+            <div class="name">
+                <h3>Jelweries</h3>
+                <div class="name-right">
+                    <p>More</p>
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+            </div>
+            <div class="pic">
+                <div class="card-1">
+                    <img src="/Image/ear1.png" alt="">
+                    <div class="info">
+                        <h3>Earring</h3>
+                        <p>small pieces of jewelry worn on the ears, often used to enhance beauty or express personal style</p>
+
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/ear2.jpg" alt="">
+                    <div class="info">
+                        <h3>Earring</h3>
+                        <p>small pieces of jewelry worn on the ears, often used to enhance beauty or express personal style</p>
+
+                        <div class="info-1">
+                           <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/ear3.jpg" alt="">
+                    <div class="info">
+                        <h3>Earring</h3>
+                        <p>small pieces of jewelry worn on the ears, often used to enhance beauty or express personal style</p>
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/braclet1.jpg" alt="">
+                    <div class="info">
+                        <h3>Bracelet</h3>
+                        <p>ornaments worn around the wrist, available in many designs to add charm or elegance to any look.</p>
+
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/braclet2.jpg" alt="">
+                    <div class="info">
+                        <h3>Bracelet</h3>
+                        <p>ornaments worn around the wrist, available in many designs to add charm or elegance to any look.</p>
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart" ></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/braclet3.jpg" alt="">
+                    <div class="info">
+                        <h3>Bracelet</h3>
+                        <p>ornaments worn around the wrist, available in many designs to add charm or elegance to any look.</p>
+
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="toy">
+                 <div class="name">
+                <h3>Toys</h3>
+                <div class="name-right">
+                    <p>More</p>
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+            </div>
+            <div class="pic">
+                <div class="card-1">
+                    <img src="/Image/sticky1.jpg" alt="">
+                    <div class="info">
+                        <h3>Sticky</h3>
+                        <p>A perfect little gift for kids – fun, colorful, and made with safe materials. It keeps them happy and engaged while encouraging creativity and play.</p>
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/cel1.jpg" alt="">
+                    <div class="info">
+                        <h3>Cinnamoroll</h3>
+                        <p>A perfect little gift for kids – fun, colorful, and made with safe materials. It keeps them happy and engaged while encouraging creativity and play.</p>
+
+                        <div class="info-1">
+                           <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/blue1.jpg" alt="">
+                    <div class="info">
+                        <h3>MuffinPaws</h3>
+                        <p>A perfect little gift for kids – fun, colorful, and made with safe materials. It keeps them happy and engaged while encouraging creativity and play.</p>
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/g1.jpg" alt="">
+                    <div class="info">
+                        <h3>GreenBeanBara</h3>
+                        <p>A perfect little gift for kids – fun, colorful, and made with safe materials. It keeps them happy and engaged while encouraging creativity and play.</p>
+
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/braclet2.jpg" alt="">
+                    <div class="info">
+                        <h3>Bracelet</h3>
+                        <p>A perfect little gift for kids – fun, colorful, and made with safe materials. It keeps them happy and engaged while encouraging creativity and play.</p>
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart" ></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <img src="/Image/braclet3.jpg" alt="">
+                    <div class="info">
+                        <h3>Bracelet</h3>
+                        <p>A perfect little gift for kids – fun, colorful, and made with safe materials. It keeps them happy and engaged while encouraging creativity and play.</p>
+
+                        <div class="info-1">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="watch"></div>
+        <div id="useful"></div>
+    </div>
 </body>
 
 </html>
