--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -24,10 +24,95 @@
                 <a href="/index.html">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
                 <a href="/Pages/blog.html">Blog</a>
-                <a href="#"  style="color: #ba425af2;">Contact</a>
+                <a href="#" style="color: #ba425af2;">Contact</a>
             </nav>
         </header>
     </div>
+    <div class="contact">
+        <div class="location">
+            <h3>DLK Branch of Phnom Penh.</h3>
+            <hr>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.1310468511792!2d104.8804121745276!3d11.614005943187443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310953000603c7b3%3A0x617531b062d5dbe!2sDLK%20Cambodia!5e0!3m2!1sen!2skh!4v1758024757855!5m2!1sen!2skh"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="form">
+            <div class="form1">
+                <h3>Contact Form</h3>
+                <hr>
+                <form action="#" class="form1-1">
+                    <div class="form1-1-1">
+                        <div class="form1-1-1-1">
+                            <span>Your Name</span>
+                            <input type="text" name="name" id="name">
+                        </div>
+                        <div class="form1-1-1-1">
+                            <span>Phone Number</span>
+                            <input type="text" name="name" id="name">
+                        </div>
+                    </div>
+                    <div class="form1-1-1">
+                        <div class="form1-1-1-1">
+                            <span>Your Email</span>
+                            <input type="email" name="name" id="name">
+                        </div>
+                        <div class="form1-1-1-1">
+                            <span>Subject</span>
+                            <input type="text" name="name" id="name">
+                        </div>
+                    </div>
+                    <div class="form1-1-2">
+                        <div class="form1-1-2-1">
+                            <span>Your Message</span>
+                            <textarea name="text" id="message"></textarea>
+                        </div>
+                        <button class="btn">Submit</button>
+                    </div>
+                </form>
+            </div>
+            <div class="form2">
+                <h3>Contact Us</h3>
+                <hr>
+                <p>For any enquirers, Please send us message, Please use the contact form.</p>
+                <hr>
+                <div class="info">
+                    <div class="form-2-1">
+                        <ul>
+                            <li><b>Location:</b>
+                                <p>📍សាខា វិថីអង្គរភ្នំពេញ : 069 460 844 (ជិតAEON2)</p>
+                                <p>📍សាខា ច្បារ​អំពៅ : 081 460 844</p>
+                                <p>📍សាខា​ ​ទួលទំពូង​ : 098 460 844</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer">
+            <div class="decript-dlk">
+                <h2>DLK CAMBODIA</h2>
+                <p> Fashion • Lifestyle • Trends</p>
+            </div>
+            <nav class="nav">
+                <a href="/index.html">Home</a>
+                <a href="/Pages/cate.html">Shop</a>
+                <a href="/Pages/blog.html">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+            <div class="contacts">
+                <a href="https://www.facebook.com/DLKCAMBODIA143/">Facebook</a>
+                <a href="https://www.instagram.com/dlk_cambodia/?hl=en">Instagram</a>
+                <a href="https://www.threads.com/@dlk_cambodia">Threads</a>
+            </div>
+            <div class="reserve">
+                <p>© 2025 DLK Cambodia. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
