--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -88,6 +88,21 @@
                     </div>
                 </div>
                 <hr>
+                <div class="time">
+                    <p id="hour">Store Hours</p>
+                    <div class="time1">
+                        <p>Monday - Friday</p>
+                        <p>9:00 AM - 8:00 PM</p>
+                    </div>
+                    <div class="time1">
+                        <p>Saturday</p>
+                        <p>9:00 AM - 9:00 PM</p>
+                    </div>
+                    <div class="time1">
+                        <p>Sunday</p>
+                        <p>11:00 AM - 6:00 PM</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
