--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <div class="title-pic">
                 <div class="title">
                     <h1>Your Everyday Style, Made Simple with DLK Cambodia</h1>
+                    <div class="button-shop">
+                        <a href="/Pages/cate.html"><button class="btn">Shop Now</button></a>
+                    </div>
                 </div>
                 <img src="/Image/bg.png" alt="">
             </div>
@@ -48,8 +51,8 @@
                     Cambodia is here to deliver quality, style, and comfort for everyone.</p>
             </div>
         </div>
-        <div class="main-3">
-            <div class="main-3-1">
+        <div class="mission_vision">
+            <div class="mision">
                 <img src="/Image/mission.jpg" alt="">
                 <div class="main-3-1-text">
                     <h3>Mission</h3>
@@ -58,7 +61,7 @@
                         experience both online and in-store.</p>
                 </div>
             </div>
-            <div class="main-3-2">
+            <div class="vision">
                 <img src="/Image/vision.jpg" alt="">
                 <div class="main-3-2-text">
                     <h3>Vision</h3>
