--- a/Pages/cate.html
+++ b/Pages/cate.html
@@ -42,16 +42,36 @@
         <div class="main-2">
             <div class="card">
                 <a href="#jelwery">
-                    <div class="card1"></div>
+                    <div class="card1">
+                        <i class='fas fa-gift'></i>
+                        <h3>Jelweries</h3>
+                        <p>A gift is more than just an item—it’s a thoughtful way to share love, joy, and appreciation, making every moment special.</p>
+                        <button class="btn-gift gift0">24 items</button>
+                    </div>
                 </a>
                 <a href="#toy">
-                    <div class="card2"></div>
+                    <div class="card2">
+                        <i class='fas fa-gift'></i>
+                        <h3>Toys</h3>
+                        <p>Toys spark imagination, support learning, and bring joy—helping children grow while creating happy memories.</p>
+                        <button class="btn-gift gift1">28 items</button>
+                    </div>
                 </a>
                 <a href="#watch">
-                    <div class="card3"></div>
+                    <div class="card3">
+                        <i class='fas fa-gift'></i>
+                        <h3>Watches</h3>
+                        <p>A stylish and precise accessory that keeps on time while complementing your outfit—combining.</p>
+                        <button class="btn-gift gift2">32 items</button>
+                    </div>
                 </a>
                 <a href="#useful">
-                    <div class="card4"></div>
+                    <div class="card4">
+                        <i class='fas fa-gift'></i>
+                        <h3>Bags</h3>
+                        <p>A versatile and stylish bag designed to carry your essentials comfortably while enhancing your look.</p>
+                        <button class="btn-gift gift3">12 items</button>
+                    </div>
                 </a>
             </div>
         </div>
@@ -75,7 +95,6 @@
                         </div>
                         <p>small pieces of jewelry worn on the ears, often used to enhance beauty or express personal
                             style</p>
-
                         <div class="info-1">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-shopping-cart"></i>
@@ -274,7 +293,7 @@
         </div>
         <div id="watch">
             <div class="name">
-                <h3>Watch & Hair Clip</h3>
+                <h3>Watch</h3>
                 <div class="name-right">
                     <p>More</p>
                     <i class="fas fa-chevron-right"></i>
@@ -332,13 +351,13 @@
                 <div class="card-1">
                     <img src="/Image/w4.jpg" alt="">
                     <div class="info">
-                        <div class="item">
-                            <h3>Hair Clip</h3>
-                            <p>$1.25</p>
+                        <div class="item3">
+                            <h3>Watch</h3>
+                            <p>$2.25</p>
                         </div>
 
-                        <p>A cute and stylish hair clip designed for girls, perfect for keeping hair in place while
-                            adding a touch of charm to any hairstyle.</p>
+                        <p>A watch is a timekeeping device worn on the wrist, combining style and function to help you
+                            track time on the go.</p>
 
                         <div class="info-1">
                             <i class="far fa-heart"></i>
@@ -349,13 +368,13 @@
                 <div class="card-1">
                     <img src="/Image/w5.jpg" alt="">
                     <div class="info">
-                        <div class="item">
-                            <h3>Hair Clip</h3>
-                            <p>$1.25</p>
+                        <div class="item3">
+                            <h3>Watch</h3>
+                            <p>$2.25</p>
                         </div>
 
-                        <p>A cute and stylish hair clip designed for girls, perfect for keeping hair in place while
-                            adding a touch of charm to any hairstyle.</p>
+                        <p>A watch is a timekeeping device worn on the wrist, combining style and function to help you
+                            track time on the go.</p>
 
                         <div class="info-1">
                             <i class="far fa-heart"></i>
@@ -366,14 +385,13 @@
                 <div class="card-1">
                     <img src="/Image/w6.jpg" alt="">
                     <div class="info">
-                        <div class="item">
-                            <h3>Hair Clip</h3>
-                            <p>$1.25</p>
+                       <div class="item3">
+                            <h3>Watch</h3>
+                            <p>$2.25</p>
                         </div>
 
-                        <p>A cute and stylish hair clip designed for girls, perfect for keeping hair in place while
-                            adding a touch of charm to any hairstyle.</p>
-
+                        <p>A watch is a timekeeping device worn on the wrist, combining style and function to help you
+                            track time on the go.</p>
                         <div class="info-1">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-shopping-cart"></i>
@@ -384,7 +402,7 @@
         </div>
         <div id="useful">
             <div class="name">
-                <h3>Neck Pillow & Bag</h3>
+                <h3>Bag</h3>
                 <div class="name-right">
                     <p>More</p>
                     <i class="fas fa-chevron-right"></i>
@@ -394,13 +412,12 @@
                 <div class="card-1">
                     <img src="/Image/h1.jpg" alt="">
                     <div class="info">
-                        <div class="item2">
-                            <h3>Neck Pillow</h3>
-                            <p>$2.25</p>
+                         <div class="item3">
+                            <h3>Bag</h3>
+                            <p>$4.5</p>
                         </div>
-
-                        <p>A soft and supportive neck pillow designed to provide comfort and relieve tension during
-                            travel or rest.</p>
+                        <p>A trendy and lightweight bag for girls, perfect for carrying daily essentials with style and
+                            comfort.</p>
                         <div class="info-1">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-shopping-cart"></i>
@@ -410,12 +427,12 @@
                 <div class="card-1">
                     <img src="/Image/h2.jpg" alt="">
                     <div class="info">
-                        <div class="item2">
-                            <h3>Neck Pillow</h3>
-                            <p>$2.25</p>
+                        <div class="item3">
+                            <h3>Bag</h3>
+                            <p>$4.5</p>
                         </div>
-                        <p>A soft and supportive neck pillow designed to provide comfort and relieve tension during
-                            travel or rest.</p>
+                        <p>A trendy and lightweight bag for girls, perfect for carrying daily essentials with style and
+                            comfort.</p>
                         <div class="info-1">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-shopping-cart"></i>
@@ -425,12 +442,12 @@
                 <div class="card-1">
                     <img src="/Image/h3.jpg" alt="">
                     <div class="info">
-                        <div class="item2">
-                            <h3>Neck Pillow</h3>
-                            <p>$2.25</p>
+                       <div class="item3">
+                            <h3>Bag</h3>
+                            <p>$4.5</p>
                         </div>
-                        <p>A soft and supportive neck pillow designed to provide comfort and relieve tension during
-                            travel or rest.</p>
+                        <p>A trendy and lightweight bag for girls, perfect for carrying daily essentials with style and
+                            comfort.</p>
                         <div class="info-1">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-shopping-cart"></i>
@@ -440,12 +457,12 @@
                 <div class="card-1">
                     <img src="/Image/h4.jpg" alt="">
                     <div class="info">
-                        <div class="item">
-                            <h3>Neck Pillow</h3>
-                            <p>$1.25</p>
+                         <div class="item3">
+                            <h3>Bag</h3>
+                            <p>$4.5</p>
                         </div>
-                        <p>A soft and supportive neck pillow designed to provide comfort and relieve tension during
-                            travel or rest.</p>
+                        <p>A trendy and lightweight bag for girls, perfect for carrying daily essentials with style and
+                            comfort.</p>
                         <div class="info-1">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-shopping-cart"></i>
