--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -7,6 +7,7 @@
     <title>DLK CAMBODIA</title>
     <link rel="icon" href="/Image/icon.jpg">
     <link rel="stylesheet" href="/CSS/blog.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
@@ -23,11 +24,115 @@
             <nav class="menu">
                 <a href="/index.html">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
-                <a href="#" style="color: #ba425af2;">Blog</a>
+                <a href="#" style="color: #ba425af2;">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
         </header>
     </div>
+    <main class="main">
+        <div class="main-1">
+            <h1>Our Services</h1>
+            <p>Beyond beautiful gifts, we offer personalized services to make your gifting experience effortless and
+                memorable</p>
+        </div>
+        <div class="main-2">
+            <div class="Corporate-Gifting">
+                <i class='fas fa-user-friends'></i>
+                <h3>Corporate Gifting</h3>
+                <p>Impress clients and employees with thoughtfully curated corporate gifts. We handle bulk orders
+                    and can customize packaging with your branding.</p>
+                <ul>
+                    <li>Bulk order discounts</li>
+                    <li>Custom branding options</li>
+                    <li>Delivery coordination</li>
+                    <li>Invoice billing available</li>
+                </ul>
+                <button class="btn-learn-more">Learn More</button>
+            </div>
+            <div class="Express_delevery">
+                <i class='fas fa-clock'></i>
+                <h3>Express Delivery</h3>
+                <p>Last-minute gift? No problem. Our express delivery service ensures your thoughtful gift arrives
+                    on time, beautifully presented.</p>
+                <ul>
+                    <li>Same-day delivery</li>
+                    <li>Express shipping options</li>
+                    <li>Delivery notifications</li>
+                    <li>Flexible time slots</li>
+                </ul>
+                <button class="btn-learn-more">Learn More</button>
+
+            </div>
+            <div class="Personal_Shopping">
+                <i class='fas fa-gift'></i>
+                <h3>Personal Shopping</h3>
+                <p>Let our gift experts curate the perfect selection for your recipient. We'll consider their
+                    personality, interests, and your budget to find something truly special.</p>
+                <ul>
+                    <li>One-on-one consultation</li>
+                    <li>Curated gift recommendations</li>
+                    <li>Budget-friendly options</li>
+                    <li>Same-day service available</li>
+                </ul>
+                <button class="btn-learn-more">Learn More</button>
+            </div>
+        </div>
+        <div class="main-3">
+            <div class="main-3-title">
+                <h1>Helpful Gifting Tips</h1>
+                <p>Expert advice to help you choose the perfect gift for any occasion</p>
+            </div>
+            <div class="main-3-content">
+                <div class="Corporate-gift">
+                    <h3>Corporate Gifts</h3>
+                    <p>Professional presents that make the right impression</p>
+                    <p>Pro Tips:</p>
+                    <ul>
+                        <li>Consider their hobbies and interests</li>
+                        <li>Think about experiences vs. physical gifts</li>
+                        <li>Personalization adds extra meaning</li>
+                    </ul>
+                </div>
+                <div class="Birthday-gift">
+                    <h3>Corporate Gifts</h3>
+                    <p>Unique ideas to make their special day unforgettable</p>
+                    <p>Pro Tips:</p>
+                    <ul>
+                        <li>Keep it appropriate and tasteful</li>
+                        <li>Consider practical items they'll use</li>
+                        <li>Quality over quantity always wins</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="main-4">
+            <h1>Need Help Choosing the Perfect Gift?</h1>
+            <p>Our gift experts are here to help you find something truly special. Get personalized recommendations based on your recipient and occasion.</p>
+            <button class="btn-contact">Contact Us</button>
+        </div>
+    </main>
+     <footer>
+        <div class="footer">
+            <div class="decript-dlk">
+                <h2>DLK CAMBODIA</h2>
+                <p> Fashion • Lifestyle • Trends</p>
+            </div>
+            <nav class="nav">
+                <a href="/index.html">Home</a>
+                <a href="/Pages/cate.html">Shop</a>
+                <a href="#">Services</a>
+                <a href="/Pages/contact.html">Contact</a>
+            </nav>
+            <div class="contacts">
+                <a href="https://www.facebook.com/DLKCAMBODIA143/">Facebook</a>
+                <a href="https://www.instagram.com/dlk_cambodia/?hl=en">Instagram</a>
+                <a href="https://www.threads.com/@dlk_cambodia">Threads</a>
+            </div>
+            <div class="reserve">
+                <p>© 2025 DLK Cambodia. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
