--- a/Pages/cate.html
+++ b/Pages/cate.html
@@ -24,7 +24,7 @@
             <nav class="menu">
                 <a href="/index.html">Home</a>
                 <a href="#" style="color: #ba425af2;">Shop</a>
-                <a href="/Pages/blog.html">Blog</a>
+                <a href="/Pages/blog.html">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
         </header>
@@ -195,7 +195,7 @@
                     <img src="/Image/sticky1.jpg" alt="">
                     <div class="info">
                         <div class="item2">
-                            <h3>Sticky</h3>
+                            <h3>Sticky Pie</h3>
                             <p>$2.25</p>
                         </div>
 
@@ -293,7 +293,7 @@
         </div>
         <div id="watch">
             <div class="name">
-                <h3>Watch</h3>
+                <h3>Watches</h3>
                 <div class="name-right">
                     <p>More</p>
                     <i class="fas fa-chevron-right"></i>
@@ -349,7 +349,7 @@
                     </div>
                 </div>
                 <div class="card-1">
-                    <img src="/Image/w4.jpg" alt="">
+                    <img src="/Image/w6.jpg" alt="">
                     <div class="info">
                         <div class="item3">
                             <h3>Watch</h3>
@@ -383,7 +383,7 @@
                     </div>
                 </div>
                 <div class="card-1">
-                    <img src="/Image/w6.jpg" alt="">
+                    <img src="/Image/w4.jpg" alt="">
                     <div class="info">
                        <div class="item3">
                             <h3>Watch</h3>
@@ -402,7 +402,7 @@
         </div>
         <div id="useful">
             <div class="name">
-                <h3>Bag</h3>
+                <h3>Bags</h3>
                 <div class="name-right">
                     <p>More</p>
                     <i class="fas fa-chevron-right"></i>
@@ -511,7 +511,7 @@
             <nav class="nav">
                 <a href="/index.html">Home</a>
                 <a href="#">Shop</a>
-                <a href="/Pages/blog.html">Blog</a>
+                <a href="/Pages/blog.html">Services</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
             <div class="contacts">
