--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -23,7 +23,7 @@
             <nav class="menu">
                 <a href="/index.html">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
-                <a href="/Pages/blog.html">Blog</a>
+                <a href="/Pages/blog.html">Sevices</a>
                 <a href="#" style="color: #ba425af2;">Contact</a>
             </nav>
         </header>
