--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="menu">
                 <a href="#" style="color:#ba425af2 ;">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
-                <a href="/Pages/cate.html">Blog</a>
+                <a href="/Pages/cate.html">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
         </header>
@@ -40,16 +40,11 @@
                 <img src="/Image/bg.png" alt="">
             </div>
         </div>
-        <div class="main-2">
-            <div class="main-2-img">
-                <img src="/Image/locat.jpg" alt="">
-            </div>
-            <div class="main-2-text">
-                <p>DLK Cambodia brings a modern, stylish, and welcoming shopping experience right to the heart of the
-                    city. With a sleek, minimalistic design and spacious layout, our store is built to make shopping
-                    easier, more enjoyable, and full of inspiration. From trendy fashion to lifestyle essentials, DLK
-                    Cambodia is here to deliver quality, style, and comfort for everyone.</p>
-            </div>
+        <div class="our_story">
+            <h1>Our Story</h1>
+            <p>Founded with a passion for meaningful connections, DLK CAMBODIA began as a simple idea: that the perfect gift can express what words cannot. We believe every occasion deserves to be celebrated with something truly special.</p>
+            <p>From intimate birthday surprises to grand wedding celebrations, we're here to help you find gifts that create lasting memories and show how much you care.</p>
+            <a href="/Pages/contact.html"><button class="learnmore">Learn More About Us</button></a>
         </div>
         <div class="mission_vision">
             <div class="mision">
@@ -81,7 +76,7 @@
             <nav class="nav">
                 <a href="#">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
-                <a href="/Pages/blog.html">Blog</a>
+                <a href="/Pages/blog.html">Services</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
             <div class="contacts">
