--- a/Pages/cate.html
+++ b/Pages/cate.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="/Image/icon.jpg">
     <link rel="stylesheet" href="/CSS/cate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="/Media/media_shop.css">
 </head>
 
 <body>
