--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -7,6 +7,7 @@
     <title>DLK CAMBODIA</title>
     <link rel="icon" href="/Image/icon.jpg">
     <link rel="stylesheet" href="/CSS/contact.css">
+    <link rel="stylesheet" href="/Media/media_contact.css">
 </head>
 
 <body>
