--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -7,6 +7,7 @@
     <title>DLK CAMBODIA</title>
     <link rel="icon" href="/Image/icon.jpg">
     <link rel="stylesheet" href="/CSS/blog.css">
+    <link rel="stylesheet" href="/Media/media_blog.css">
 </head>
 
 <body>
