--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>DLK CAMBODIA</title>
     <link rel="icon" href="/Image/icon.jpg">
     <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="/Media/media_index.css">
 </head>
 
 <body>
