--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -109,7 +109,7 @@
         <div class="main-4">
             <h1>Need Help Choosing the Perfect Gift?</h1>
             <p>Our gift experts are here to help you find something truly special. Get personalized recommendations based on your recipient and occasion.</p>
-            <button class="btn-contact">Contact Us</button>
+            <a href="/Pages/contact.html"><button class="btn-contact">Contact Us</button></a>
         </div>
     </main>
      <footer>
