--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -80,7 +80,7 @@
                 <div class="info">
                     <div class="form-2-1">
                         <ul>
-                            <li><b>Location:</b>
+                            <li><b id="hour" >Location:</b>
                                 <p>📍សាខា វិថីអង្គរភ្នំពេញ : 069 460 844 (ជិតAEON2)</p>
                                 <p>📍សាខា ច្បារ​អំពៅ : 081 460 844</p>
                                 <p>📍សាខា​ ​ទួលទំពូង​ : 098 460 844</p>
@@ -90,7 +90,7 @@
                 </div>
                 <hr>
                 <div class="time">
-                    <p id="hour">Store Hours</p>
+                    <p id="hour">Store Hours:</p>
                     <div class="time1">
                         <p>Monday - Friday</p>
                         <p>9:00 AM - 8:00 PM</p>
