--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
         </header>
-    </div> 
+    </div>
     <main class="main">
         <div class="main-1">
             <div class="title-pic">
@@ -43,8 +43,11 @@
         </div>
         <div class="our_story">
             <h1>Our Story</h1>
-            <p>Founded with a passion for meaningful connections, DLK CAMBODIA began as a simple idea: that the perfect gift can express what words cannot. We believe every occasion deserves to be celebrated with something truly special.</p>
-            <p>From intimate birthday surprises to grand wedding celebrations, we're here to help you find gifts that create lasting memories and show how much you care.</p>
+            <p>Founded with a passion for meaningful connections, DLK CAMBODIA began as a simple idea: that the perfect
+                gift can express what words cannot. We believe every occasion deserves to be celebrated with something
+                truly special.</p>
+            <p>From intimate birthday surprises to grand wedding celebrations, we're here to help you find gifts that
+                create lasting memories and show how much you care.</p>
             <a href="/Pages/contact.html"><button class="learnmore">Learn More About Us</button></a>
         </div>
         <div class="mission_vision">
