--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -28,6 +28,10 @@
                 <a href="#" style="color: #ba425af2;">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
+            <div class="input-search">
+                <input type="text" id="text" placeholder="Search...">
+                <button class="btn-search">Search</button>
+            </div>
         </header>
     </div>
     <main class="main">
@@ -108,11 +112,12 @@
         </div>
         <div class="main-4">
             <h1>Need Help Choosing the Perfect Gift?</h1>
-            <p>Our gift experts are here to help you find something truly special. Get personalized recommendations based on your recipient and occasion.</p>
+            <p>Our gift experts are here to help you find something truly special. Get personalized recommendations
+                based on your recipient and occasion.</p>
             <a href="/Pages/contact.html"><button class="btn-contact">Contact Us</button></a>
         </div>
     </main>
-     <footer>
+    <footer>
         <div class="footer">
             <div class="decript-dlk">
                 <h2>DLK CAMBODIA</h2>
