--- a/Pages/cate.html
+++ b/Pages/cate.html
@@ -28,6 +28,10 @@
                 <a href="/Pages/blog.html">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
+            <div class="input-search">
+                <input type="text" id="text" placeholder="Search...">
+                <button class="btn-search">Search</button>
+            </div>
         </header>
     </div>
     <main class="main">
@@ -46,7 +50,8 @@
                     <div class="card1">
                         <i class='fas fa-gift'></i>
                         <h3>Jelweries</h3>
-                        <p>A gift is more than just an item—it’s a thoughtful way to share love, joy, and appreciation, making every moment special.</p>
+                        <p>A gift is more than just an item—it’s a thoughtful way to share love, joy, and appreciation,
+                            making every moment special.</p>
                         <button class="btn-gift gift0">24 items</button>
                     </div>
                 </a>
@@ -54,7 +59,8 @@
                     <div class="card2">
                         <i class='fas fa-gift'></i>
                         <h3>Toys</h3>
-                        <p>Toys spark imagination, support learning, and bring joy—helping children grow while creating happy memories.</p>
+                        <p>Toys spark imagination, support learning, and bring joy—helping children grow while creating
+                            happy memories.</p>
                         <button class="btn-gift gift1">28 items</button>
                     </div>
                 </a>
@@ -62,7 +68,8 @@
                     <div class="card3">
                         <i class='fas fa-gift'></i>
                         <h3>Watches</h3>
-                        <p>A stylish and precise accessory that keeps on time while complementing your outfit—combining.</p>
+                        <p>A stylish and precise accessory that keeps on time while complementing your outfit—combining.
+                        </p>
                         <button class="btn-gift gift2">32 items</button>
                     </div>
                 </a>
@@ -70,7 +77,8 @@
                     <div class="card4">
                         <i class='fas fa-gift'></i>
                         <h3>Bags</h3>
-                        <p>A versatile and stylish bag designed to carry your essentials comfortably while enhancing your look.</p>
+                        <p>A versatile and stylish bag designed to carry your essentials comfortably while enhancing
+                            your look.</p>
                         <button class="btn-gift gift3">12 items</button>
                     </div>
                 </a>
@@ -384,7 +392,7 @@
                 <div class="card-1">
                     <img src="/Image/w4.jpg" alt="">
                     <div class="info">
-                       <div class="item3">
+                        <div class="item3">
                             <h3>Watch</h3>
                             <p>$2.25</p>
                         </div>
@@ -411,7 +419,7 @@
                 <div class="card-1">
                     <img src="/Image/h1.jpg" alt="">
                     <div class="info">
-                         <div class="item3">
+                        <div class="item3">
                             <h3>Bag</h3>
                             <p>$4.5</p>
                         </div>
@@ -441,7 +449,7 @@
                 <div class="card-1">
                     <img src="/Image/h3.jpg" alt="">
                     <div class="info">
-                       <div class="item3">
+                        <div class="item3">
                             <h3>Bag</h3>
                             <p>$4.5</p>
                         </div>
@@ -456,7 +464,7 @@
                 <div class="card-1">
                     <img src="/Image/h4.jpg" alt="">
                     <div class="info">
-                         <div class="item3">
+                        <div class="item3">
                             <h3>Bag</h3>
                             <p>$4.5</p>
                         </div>
