--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -16,7 +16,7 @@
             <img src="/Image/head.jpg" alt="">
             <p>Deliver Happiness to You</p>
         </div>
-        <header class="header">
+            <header class="header">
             <div class="img">
                 <img src="/Image/icon.jpg" alt="">
                 <p><span>DLK</span> CAMBODIA</p>
@@ -25,8 +25,12 @@
                 <a href="/index.html">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
                 <a href="/Pages/blog.html">Sevices</a>
-                <a href="#" style="color: #ba425af2;">Contact</a>
+                <a href="#" style="color:#ba425af2">Contact</a>
             </nav>
+            <div class="input-search">
+                <input type="text" id="text" placeholder="Search...">
+                <button class="btn-search">Search</button>
+            </div>
         </header>
     </div>
     <div class="contact">
