--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <a href="/Pages/blog.html">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
+            <div class="input-search">
+                <input type="text" id="text" placeholder="Search...">
+                <button class="btn-search">Search</button>
+            </div>
         </header>
     </div>
     <main class="main">
@@ -35,7 +39,7 @@
                 <div class="title">
                     <h1>Your Everyday Style, Made Simple with DLK Cambodia</h1>
                     <div class="button-shop">
-                        <a href="/Pages/cate.html"><button class="btn">Shop Now</button></a>
+                        <a href="/Pages/cate.html"><button class="btn-shop">Shop Now</button></a>
                     </div>
                 </div>
                 <img src="/Image/bg.png" alt="">
