--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -25,7 +25,7 @@
             <nav class="menu">
                 <a href="/index.html">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
-                <a href="#" style="color: #ba425af2;">Sevices</a>
+                <a href="#" style="color:#ba425af2; font-weight: 600;">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
             <div class="input-search">
