--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -25,7 +25,7 @@
                 <a href="/index.html">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
                 <a href="/Pages/blog.html">Sevices</a>
-                <a href="#" style="color:#ba425af2">Contact</a>
+                <a href="#" style="color:#ba425af2; font-weight: 600;">Contact</a>
             </nav>
             <div class="input-search">
                 <input type="text" id="text" placeholder="Search...">
