--- a/Pages/cate.html
+++ b/Pages/cate.html
@@ -24,7 +24,7 @@
             </div>
             <nav class="menu">
                 <a href="/index.html">Home</a>
-                <a href="#" style="color: #ba425af2;">Shop</a>
+                <a href="#" style="color:#ba425af2; font-weight: 600;">Shop</a>
                 <a href="/Pages/blog.html">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
             </nav>
