--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p><span>DLK</span> CAMBODIA</p>
             </div>
             <nav class="menu">
-                <a href="#" style="color:#ba425af2 ;">Home</a>
+                <a href="#" style="color:#ba425af2; font-weight: 600;">Home</a>
                 <a href="/Pages/cate.html">Shop</a>
                 <a href="/Pages/blog.html">Sevices</a>
                 <a href="/Pages/contact.html">Contact</a>
